# notelendar

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  gcal_api.py  main.py
app/authentication/: authenticator.py
app/models/: google.py  models.py  note.py
app/services/: note.py
